modify ObjectAccessorFactory